--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,9 +3,9 @@ fixtures:
     stdlib:
       repo: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
       ref: "4.23.0"
-    staging:
-      repo: "git://github.com/voxpupuli/puppet-staging.git"
-      ref: "v3.2.0"
+    archive:
+      repo: "git://github.com/voxpupuli/puppet-archive.git"
+      ref: "v1.3.0"
     concat:
       repo: "git://github.com/puppetlabs/puppet-concat.git"
       ref: "2.2.1"
